- ADDED: Multiblock no offsets option